# Prototyping-IPC

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  ipc-tests.yml
Gateway/: Gateway.cpp  Gateway.h  main.cpp
Gateway/Scheduler/: GatewayScheduler.h
common/: Exception.h
common/BlockingQueue/: IBlockingQueue.h  MutexBlockingQueue.h
common/Logger/: Appender.h  Config.h  Filter.h  Log.h  Logger.h
common/Scheduler/Worker/: Worker.cpp
common/ipc/: ScopedFileLock.h  SharedMemory_Consumer.cpp  SharedMemory_Producer.cpp
process1/: Sequencer.h  main.cpp  process1
process2/: main.cpp  process2
tests/: test_ipc_crash.cpp
